--- a/sense.ipynb
+++ b/sense.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "stretch-commission",
+   "execution_count": 1,
+   "id": "decent-diary",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#>cd Documents/NTU/2_Sophomore/2-2/R/Project/LING5505-Final-Project-Group3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "spatial-saver",
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "measured-status",
+   "execution_count": 2,
+   "id": "romantic-switch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,10 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "automated-trade",
+   "execution_count": 3,
+   "id": "married-discovery",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dereklu/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/layers/legacy_rnn/rnn_cell_impl.py:909: UserWarning: `tf.nn.rnn_cell.LSTMCell` is deprecated and will be removed in a future version. This class is equivalent as `tf.keras.layers.LSTMCell`, and will be replaced by that in Tensorflow 2.0.\n",
+      "  warnings.warn(\"`tf.nn.rnn_cell.LSTMCell` is deprecated and will be \"\n",
+      "/Users/dereklu/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/keras/engine/base_layer_v1.py:1700: UserWarning: `layer.add_variable` is deprecated and will be removed in a future version. Please use `layer.add_weight` method instead.\n",
+      "  warnings.warn('`layer.add_variable` is deprecated and '\n"
+     ]
+    }
+   ],
    "source": [
     "ws = WS(os.path.abspath(os.path.join(os.getcwd(), os.path.pardir)) + '/data')\n",
     "pos = POS(os.path.abspath(os.path.join(os.getcwd(), os.path.pardir)) + '/data')\n",
@@ -62,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "naughty-garage",
+   "execution_count": 4,
+   "id": "acknowledged-library",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +98,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fitted-elder",
+   "metadata": {},
+   "source": [
+    "### 斷詞結果顯示"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "trying-cassette",
+   "execution_count": 5,
+   "id": "progressive-webmaster",
    "metadata": {},
    "outputs": [
     {
@@ -123,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "natural-pencil",
+   "execution_count": 6,
+   "id": "advanced-darkness",
    "metadata": {},
    "outputs": [
     {
@@ -148,9 +177,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "close-yorkshire",
+   "metadata": {},
+   "source": [
+    "### 詞性頻率分析"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "innocent-salmon",
+   "execution_count": 7,
+   "id": "affiliated-transportation",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +254,7 @@
        "4               D         30"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,8 +267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "healthy-conclusion",
+   "execution_count": 8,
+   "id": "technical-header",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +288,7 @@
        "Length: 487, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,9 +299,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "hairy-admission",
+   "metadata": {},
+   "source": [
+    "### 辭意搜尋與辭意計算"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "intelligent-flour",
+   "execution_count": 9,
+   "id": "psychological-colorado",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,8 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "overall-yemen",
+   "execution_count": 10,
+   "id": "intellectual-foundation",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +338,7 @@
      "text": [
       "word:  生命\n",
       "[<CwnSense[06531701](生命): 生物生存的機能。>, <CwnSense[06531702](生命): 自然界中所有具有生命並有生長繁殖能力的物體。>, <CwnSense[06531703](生命): 比喻人的生活和經歷。>, <CwnSense[06531704](生命): 比喻前述對象重視、不可或缺的特定對象。>, <CwnSense[06531705](生命): 比喻人造物發揮功能的時段。>, <CwnSense[06531706](生命): 比喻生物從事前述事件的一段生命時間範圍。>, <CwnSense[06531707](生命): 比喻藝術作品靈活生動、貼近人類生活的特質。>, <CwnSense[06531708](生命): 比喻可使特定對象正面發展的機會。>]\n",
-      "total sense =  8\n"
+      "total senses =  8\n"
      ]
     },
     {
@@ -302,7 +347,7 @@
        "8"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,9 +360,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "embedded-hacker",
+   "metadata": {},
+   "source": [
+    "### 所有單詞詞性與辭意計算（辭意非零者）"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "systematic-humidity",
+   "execution_count": 11,
+   "id": "native-edward",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +488,7 @@
        "[316 rows x 3 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,9 +512,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "urban-sailing",
+   "metadata": {},
+   "source": [
+    "### 辭意為零者"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "educational-yugoslavia",
+   "execution_count": 12,
+   "id": "second-pipeline",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Word</th>\n",
+       "      <th>CKIP_POS</th>\n",
+       "      <th>sense_cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>廣度</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>豐富度</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>厚度</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>面向</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>調和</td>\n",
+       "      <td>VH</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>輿圖</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>堅定</td>\n",
+       "      <td>VHC</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>信念</td>\n",
+       "      <td>Na</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>調合</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>綻放</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Word CKIP_POS  sense_cnt\n",
+       "4     廣度       Na          0\n",
+       "6    豐富度       Na          0\n",
+       "12    厚度       Na          0\n",
+       "20    面向       Na          0\n",
+       "30    調和       VH          0\n",
+       "..   ...      ...        ...\n",
+       "368   輿圖       Na          0\n",
+       "382   堅定      VHC          0\n",
+       "384   信念       Na          0\n",
+       "394   調合       VC          0\n",
+       "395   綻放       VC          0\n",
+       "\n",
+       "[84 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senses_df_0 = senses_df[senses_df.sense_cnt == 0]\n",
+    "senses_df_0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "excited-uncertainty",
+   "metadata": {},
+   "source": [
+    "### 辭意非零者平均辭意"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "helpful-tumor",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +670,7 @@
        "7.901898734177215"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,9 +681,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cellular-intake",
+   "metadata": {},
+   "source": [
+    "### 扣除詞性為DE與Nh者單詞出現頻率"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 230,
-   "id": "ordinary-possibility",
+   "execution_count": 14,
+   "id": "frank-matrix",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +816,7 @@
        "[143 rows x 1 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "processed-blame",
+   "id": "beginning-square",
    "metadata": {},
    "outputs": [],
    "source": []
