--- a/_good_sent.Rmd
+++ b/_good_sent.Rmd
@@ -19,12 +19,12 @@ knitr::opts_chunk$set(echo = TRUE,comment = '#>',error=TRUE, results = 'hold', o
 
 # 讀檔
 ```{r}
-id <- list.files("./article/") # 文章的檔名
+id <- list.files("./data_set/") # 文章的檔名
 contents <- vector("character", length(id)) # 創一個長度與文章數相同的vector
 
 # 將文章內容讀進來，並放入contents這個變數中(不分段)
 for (i in seq_along(id)){
-  path <- paste0("./article/", id[i])
+  path <- paste0("./data_set/", id[i])
   contents[i] <- paste0(readLines(path, encoding = "UTF-8", warn=FALSE), collapse = "")
 }
 
@@ -171,39 +171,56 @@ good_sent_id <- c()
 for (i in seq_along(id)){
   sentences <- unique(str_match_all(contents[[i]], "：(\\w|，){5,}(。|？|！)")[[1]][,1])
   good_sent <- c(good_sent, sentences)
-  good_sent_id <- c(good_sent_id, rep(i, length(sentences)))
+  good_sent_id <- c(good_sent_id, rep(id[i], length(sentences)))
 }
 
 # 含引號
 for (i in seq_along(id)){
   sentences <- unique(str_match_all(contents[[i]], "「(\\w|，|。|！|；|、){5,}?」")[[1]][,1])
   good_sent <- c(good_sent, sentences)
-  good_sent_id <- c(good_sent_id, rep(i, length(sentences)))
+  good_sent_id <- c(good_sent_id, rep(id[i], length(sentences)))
 }
 
 # 拿掉冒號和上下引號
 good_sent <- unlist(lapply(good_sent, function(x){str_replace_all(x, "[：「」]", "")}))
+
+
+# 人工移除不合適結果
+good_sent <- good_sent[-c(5, 6, 7, 8, 9, 10, 11, 13, 18, 19, 20, 22, 24, 25, 26, 27, 28, 32, 35, 40, 43, 44, 58, 61, 73, 74, 75, 76, 83, 85, 91, 95, 96, 97, 102, 103, 104, 105, 109, 115, 118, 119, 122, 124, 126, 128, 132, 135, 137, 138, 143, 146, 148, 150, 159, 160, 163, 169, 171, 174, 175, 176, 189, 193, 194, 197, 203, 208, 213, 216, 219, 221, 223, 232, 235, 242, 243, 245, 258, 259, 268, 273, 274, 275, 276, 278, 288, 304, 306, 309, 312, 314, 315, 316, 323, 324, 329, 330, 336, 345, 346, 347)]
+
+good_sent_id <- good_sent_id[-c(5, 6, 7, 8, 9, 10, 11, 13, 18, 19, 20, 22, 24, 25, 26, 27, 28, 32, 35, 40, 43, 44, 58, 61, 73, 74, 75, 76, 83, 85, 91, 95, 96, 97, 102, 103, 104, 105, 109, 115, 118, 119, 122, 124, 126, 128, 132, 135, 137, 138, 143, 146, 148, 150, 159, 160, 163, 169, 171, 174, 175, 176, 189, 193, 194, 197, 203, 208, 213, 216, 219, 221, 223, 232, 235, 242, 243, 245, 258, 259, 268, 273, 274, 275, 276, 278, 288, 304, 306, 309, 312, 314, 315, 316, 323, 324, 329, 330, 336, 345, 346, 347)]
+
+# 佳句
+good_sent
+
+# 有引用佳句的文章比例為多少
+df_good_sent <- tibble::tibble(id = id)
+df_quote <- df_good_sent %>%
+  mutate(quote = (id %in% good_sent_id)) %>%
+  group_by(quote) %>%
+  summarise(quote_Q = n(), percentage = n()/208)
+df_quote
 
 ```
 
 ## 找相似佳句
 ```{r}
 library(jiebaR)
-# 把審己以度人拿掉
-good_sent <- good_sent[!good_sent %in% c("審己以度人")]
 
 # 去除所有標點符號
 good_sent_clean <- unlist(lapply(good_sent, function(x){str_replace_all(x, "[，。！、]", "")}))
 
 # 計算相似度
 simhasher = worker("simhash", topn = 10)
-for(i in 1:(length(id)-1)){
-  for(j in((i+1):length(id))){
+for(i in 1:(length(good_sent)-1)){
+  for(j in((i+1):length(good_sent))){
     sim <- distance(good_sent_clean[i], good_sent_clean[j], simhasher)$distance
-    if (sim < 10){
+    if (sim < 12){
       if (!(good_sent_id[i] == good_sent_id[j])){
         print(sim)
+        print(good_sent_id[i])
         print(good_sent[i])
+        print(good_sent_id[j])
         print(good_sent[j])
         print("")
       }
