--- a/web/index.Rmd
+++ b/web/index.Rmd
@@ -15,13 +15,19 @@ output:
 
 <!-- PART1 -->
 # **前言**
-(為什麼做這個題目)
+國寫在升大學考試之國文科目中，與選擇題各佔一半分數之比重，惟我國之國文教學，向來重視古文閱讀、國學常識等，在教學大綱中以選擇題的答寫作為主要教學方向，許多學生對於國寫部分之掌握能力相對不足。因此，本組希望透過分析國寫情意題佳作詞頻，進一步洞察國寫在我國命題方向與佳作取材等寫作方式。從本組分析成果上來看，可以查知國寫範文有＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿等特色。
 
 ---
 
 <!-- PART2 -->
-# **資料來源**
-(大考中心網站)
+# **研究方法**
+## **資料來源與介紹**
+本組參酌大考中心每年提供之升大學考試國文作文佳作範本，收錄範圍為民國95年至110年學測與98年至110年指考，共計208篇。另外，由於大考中心係提供範文手寫影本，資料前處理較為耗時，為免壓縮後續資料處理時間，106至110年之學測與指考皆各收錄兩筆資料，並以完整結構之作文為主（新式國寫有部分簡答題）。
+
+## **資料前處理**
+本組以手動繕打將資料輸入電腦轉換成txt.檔，統一資料格式（例如：分段換行、無空格、完整標點符號、刪除底線、標準化檔名）後，再匯入Ｒ、python進行後續資料分析。
+處理後之資料格式範例顯示如下：
+
 
 ---
 
@@ -165,22 +171,51 @@ good_sent_id <- c()
 for (i in seq_along(id)){
   sentences <- unique(str_match_all(contents[[i]], "：(\\w|，){5,}(。|？|！)")[[1]][,1])
   good_sent <- c(good_sent, sentences)
-  good_sent_id <- c(good_sent_id, rep(i, length(sentences)))
+  good_sent_id <- c(good_sent_id, rep(id[i], length(sentences)))
 }
 
 # 含引號
 for (i in seq_along(id)){
   sentences <- unique(str_match_all(contents[[i]], "「(\\w|，|。|！|；|、){5,}?」")[[1]][,1])
   good_sent <- c(good_sent, sentences)
-  good_sent_id <- c(good_sent_id, rep(i, length(sentences)))
+  good_sent_id <- c(good_sent_id, rep(id[i], length(sentences)))
 }
 
 # 拿掉冒號和上下引號
 good_sent <- unlist(lapply(good_sent, function(x){str_replace_all(x, "[：「」]", "")}))
 
-# 看結果
+
+# 人工移除不合適結果
+good_sent <- good_sent[-c(5, 6, 7, 8, 9, 10, 11, 13, 18, 19, 20, 22, 24, 25, 26, 27, 28, 32, 35, 40, 43, 44, 58, 61, 73, 74, 75, 76, 83, 85, 91, 95, 96, 97, 102, 103, 104, 105, 109, 115, 118, 119, 122, 124, 126, 128, 132, 135, 137, 138, 143, 146, 148, 150, 159, 160, 163, 169, 171, 174, 175, 176, 189, 193, 194, 197, 203, 208, 213, 216, 219, 221, 223, 232, 235, 242, 243, 245, 258, 259, 268, 273, 274, 275, 276, 278, 288, 304, 306, 309, 312, 314, 315, 316, 323, 324, 329, 330, 336, 345, 346, 347)]
+
+good_sent_id <- good_sent_id[-c(5, 6, 7, 8, 9, 10, 11, 13, 18, 19, 20, 22, 24, 25, 26, 27, 28, 32, 35, 40, 43, 44, 58, 61, 73, 74, 75, 76, 83, 85, 91, 95, 96, 97, 102, 103, 104, 105, 109, 115, 118, 119, 122, 124, 126, 128, 132, 135, 137, 138, 143, 146, 148, 150, 159, 160, 163, 169, 171, 174, 175, 176, 189, 193, 194, 197, 203, 208, 213, 216, 219, 221, 223, 232, 235, 242, 243, 245, 258, 259, 268, 273, 274, 275, 276, 278, 288, 304, 306, 309, 312, 314, 315, 316, 323, 324, 329, 330, 336, 345, 346, 347)]
+
+# 佳句
 good_sent
 
+```
+
+## 相似的名言佳句
+```{r, echo=FALSE}
+library(jiebaR)
+
+# 去除所有標點符號
+good_sent_clean <- unlist(lapply(good_sent, function(x){str_replace_all(x, "[，。！、]", "")}))
+
+# 計算相似度
+simhasher = worker("simhash", topn = 10)
+for(i in 1:(length(good_sent)-1)){
+  for(j in((i+1):length(good_sent))){
+    sim <- distance(good_sent_clean[i], good_sent_clean[j], simhasher)$distance
+    if (sim < 12){
+      if (!(good_sent_id[i] == good_sent_id[j])){
+        cat(good_sent_id[i], good_sent[i], "\n")
+        cat(good_sent_id[j], good_sent[j], "\n")
+        cat("\n")
+      }
+    }
+  } 
+}
 ```
 
 ---
