--- a/sense.ipynb
+++ b/sense.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "injured-waste",
+   "id": "compatible-event",
    "metadata": {},
    "source": [
     "cd Documents/NTU/2_Sophomore/2-2/R/Project/LING5505-Final-Project-Group3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "welsh-freeze",
+   "id": "chronic-header",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "exact-desktop",
+   "id": "quick-montana",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-context",
+   "id": "oriented-audience",
    "metadata": {},
    "source": [
     "### 讀取資料集"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "interpreted-mustang",
+   "id": "affiliated-wireless",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "loose-probe",
+   "id": "cathedral-marshall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "tough-reconstruction",
+   "id": "choice-source",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-heavy",
+   "id": "standard-think",
    "metadata": {},
    "source": [
     "### setting ckiptagger"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fundamental-toilet",
+   "id": "protective-grounds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-railway",
+   "id": "jewish-argentina",
    "metadata": {},
    "source": [
     "### 斷詞結果顯示函式"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "reduced-gospel",
+   "id": "focused-tournament",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "studied-lodge",
+   "id": "fatty-compiler",
    "metadata": {},
    "source": [
     "### 詞性頻率分析"
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "institutional-declaration",
+   "id": "clinical-specification",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "waiting-mouth",
+   "id": "elementary-release",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifty-premiere",
+   "id": "stuck-studio",
    "metadata": {},
    "source": [
     "### 斷詞"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "impaired-extension",
+   "id": "infrared-insertion",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-board",
+   "id": "becoming-freight",
    "metadata": {},
    "source": [
     "### 單詞辭意計算函式"
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "civilian-charles",
+   "id": "prescribed-camel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "serious-bible",
+   "id": "chinese-cooper",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-retail",
+   "id": "white-houston",
    "metadata": {},
    "source": [
     "### 所有單詞詞性與辭意計算（辭意非零者）"
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bright-edward",
+   "id": "complete-attention",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "opening-productivity",
+   "id": "centered-diabetes",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordinary-today",
+   "id": "painful-carrier",
    "metadata": {},
    "source": [
     "### 平均辭意"
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "permanent-equipment",
+   "id": "partial-fiction",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portable-valley",
+   "id": "sublime-plaza",
    "metadata": {},
    "source": [
     "### 辭意為零者"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "finite-profile",
+   "id": "particular-clock",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "signed-somewhere",
+   "id": "coral-tension",
    "metadata": {},
    "outputs": [
     {
@@ -806,13 +806,13 @@
    ],
    "source": [
     "sense0_por = senses_df_0.shape[0]/senses_df_.shape[0]\n",
-    "print(\"整體而言辭意為零之單佔所有單詞比例:\")\n",
+    "print(\"整體而言辭意為零之單詞佔所有單詞的比例:\")\n",
     "print(sense0_por)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "confidential-current",
+   "id": "rough-connecticut",
    "metadata": {},
    "source": [
     "### 特定詞性單詞出現頻率（含辭意為零者）"
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "structured-trade",
+   "id": "complicated-impression",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indirect-budget",
+   "id": "superior-decision",
    "metadata": {},
    "outputs": [],
    "source": []
