update sense html

--- a/sense.ipynb
+++ b/sense.ipynb
@@ -1,18 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "b1f69cb2",
-   "metadata": {},
-   "source": [
-    "cd Documents/NTU/2_Sophomore/2-2/R/Project/LING5505-Final-Project-Group3"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "77d11a6b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -43,7 +40,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "986194bc",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -74,7 +78,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "8fe6bd8b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -104,7 +115,12 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "3ef19541",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -259,7 +275,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "3cd29fb8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "word_sentence_list = ws(sentence_list)\n",
@@ -281,7 +302,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "6a66b36b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -323,7 +351,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "7075e24f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -521,7 +554,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e1d95396",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -577,7 +615,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "56d5476e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -624,7 +667,12 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "ced1b27d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cwn = CwnBase()\n",
@@ -644,7 +692,14 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "0f63f04a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -678,7 +733,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "fb060445",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -825,7 +887,12 @@
    "cell_type": "code",
    "execution_count": 83,
    "id": "d6b4753c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -949,7 +1016,12 @@
    "cell_type": "code",
    "execution_count": 76,
    "id": "ae16466b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1013,7 +1085,12 @@
    "cell_type": "code",
    "execution_count": 84,
    "id": "67d72da5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1060,7 +1137,12 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "ff6494ab",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tmp_list = list()\n",
@@ -1079,7 +1161,12 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "a9ee11b2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
