--- a/sense.ipynb
+++ b/sense.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5cc268ae-3089-4467-8892-d6496efd92d2",
+   "metadata": {},
+   "source": [
+    "# 台灣升大學考試國寫情意題佳作詞頻相關研究\n",
+    "\n",
+    "+ 第三組 想不到組名\n",
+    "+ 組員：盧德原、朱修平、楊舒晴、陳宛瑩"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26d6b4f7-89a2-4299-b4a5-21080c487898",
+   "metadata": {},
+   "source": [
+    "## Python Project"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "77d11a6b",
@@ -1643,14 +1662,6 @@
    "source": [
     "以上我們統計了幾個特定詞性在所有資料集的單詞出現頻率。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05fa58c0-ec62-487d-b59a-a4d52e96b6d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
