--- a/web/index.Rmd
+++ b/web/index.Rmd
@@ -47,7 +47,7 @@ file content  四季遞嬗，各有各的紛繁絢麗，也各有各的落寞寂
 本組將成果報告分成以下4個部分，依序為**基礎結構分析**、**引用資料分析**、**語彙詞頻分析**與**相似性分析**，詳細說明如下：
 
 <!-- 所有會用到的library -->
-```{r, echo = FALSE}
+```{r, echo = FALSE, warning=FALSE}
 library(jiebaR, jiebaRD)
 library(stringr)
 library(dplyr)
@@ -73,7 +73,7 @@ library("magrittr")
 ### **1.1佳作文章長度**
 <div class = "row">
 <div class = "col-md-8">
-```{r, echo = FALSE, message=FALSE}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 text <- list.files(path = "../data_set/", full.names = FALSE)## ÀÉ®×
 paragraph_num <- vector("numeric", length = length(text))## number of paragraph
 article_len <- vector("numeric", length = length(text))## length of article
@@ -144,7 +144,7 @@ ggplot(data = df_unbreak) +
 ### **1.2文章句數**
 <div class = "row">
 <div class = "col-md-8">
-```{r, echo = FALSE, message=FALSE}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 #文章句數分佈圖
 ggplot(data = df_unbreak) +
   geom_freqpoly(aes(x=sentence_num),size=1,color="#996666")+
@@ -169,7 +169,7 @@ theme(text=element_text(family="LiHeiPro",size=12))
 ### **1.3段落分佈狀況**
 <div class = "row">
 <div class = "col-md-8">
-```{r, echo = FALSE}
+```{r, echo = FALSE, warning=FALSE}
 #文章段落數分佈圖
 ggplot(data = df_unbreak) +
   geom_bar(aes(x=par_num),size=1,color="#996666")+
@@ -195,7 +195,7 @@ ggplot(data = df_unbreak) +
 <div class = "row">
 <div class = "col-md-6">
 <br>
-```{r, echo = FALSE, fig.height=6, fig.width=4}
+```{r, echo = FALSE, fig.height=6, fig.width=4, warning=FALSE}
 year <- unlist(lapply(id, function(x){as.integer(strsplit(x, split = "_")[[1]][[2]])}))
 docs_df$year <- year
 year_df <- docs_df %>%
@@ -242,7 +242,7 @@ ggplot(data = year_df) +
 <div class = "row">
 
 <div class = "col-md-7">
-```{r, echo = FALSE, out.width='100%'}
+```{r, echo = FALSE, out.width='100%', warning=FALSE}
 ## 讀檔
 id <- list.files("../data_set/") # 文章的檔名
 contents <- vector("character", length(id)) # 創一個長度與文章數相同的vector
@@ -290,14 +290,13 @@ geom_text(aes(label = paste0(sprintf("%1.1f", percent*100),"%"), y=(count+10)),s
 </div>
 
 <div class = "col-md-5">
-```{r, echo = FALSE, out.width='100%', fig.height=5, fig.width=5}
+```{r, echo = FALSE, out.width='100%', fig.height=5, fig.width=5, warning=FALSE, message=FALSE}
 # 有引用佳句的文章比例為多少
 df_good_sent <- tibble::tibble(id = id)
 df_quote <- df_good_sent %>%
   mutate(quote = (id %in% good_sent_id)) %>%
   group_by(quote) %>%
   summarise(quote_Q = n(), percentage = n()/208)
-df_quote
 
 #製圖
 ggplot(df_quote, aes(x=" ", y=percentage, fill=quote)) +
@@ -321,7 +320,7 @@ theme(text=element_text(family="LiHeiPro",size=12))
 
 <div class = "row">
 <div class = "col-md-7">
-```{r, echo = FALSE, out.width='100%', fig.height=6, fig.width=5}
+```{r, echo = FALSE, out.width='100%', fig.height=6, fig.width=5, warning=FALSE}
 # 哪個名人、偉人出現在最多篇文章中
 # 名字計數器(傳入某名字，函數會回傳提到此名字的文章有幾篇)
 count_times <- function(name){
@@ -382,7 +381,7 @@ ggplot(names_df1, aes(x = reorder(name, article_found_Q), y = article_found_Q)) 
 
 ### **2.2佳句**
 **佳句集錦**
-```{r, echo=FALSE, attr.output='style="max-height: 300px;"'}
+```{r, echo=FALSE, attr.output='style="max-height: 300px;"', warning=FALSE}
 good_sent <- c()
 good_sent_id <- c()
 
@@ -416,7 +415,7 @@ good_sent
 
 
 **重複出現之佳句**
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 # 去除所有標點符號
 good_sent_clean <- unlist(lapply(good_sent, function(x){str_replace_all(x, "[，。！、]", "")}))
 
@@ -449,7 +448,7 @@ for(i in 1:(length(good_sent)-1)){
 ## **4相似性分析**
 ### **4.1首段與尾段落相似性**
 ### **4.2輸入新文章分析器**
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 
 library("jiebaR", "jiebaRD")
 library("stringr")
