--- a/web/index.Rmd
+++ b/web/index.Rmd
@@ -14,7 +14,7 @@ output:
 
 <!-- PART1 -->
 # **前言**
-國寫在升大學考試之國文科目中，與選擇題各佔一半分數之比重，惟我國之國文教學，向來重視古文閱讀、國學常識等，在教學大綱中以選擇題的答寫作為主要教學方向，許多學生對於國寫部分之掌握能力相對不足。因此，本組希望透過分析國寫情意題佳作詞頻，進一步洞察國寫在我國命題方向與佳作取材等寫作方式。從本組分析成果上來看，可以查知國寫範文有以等特色。
+國寫在升大學考試之國文科目中，與選擇題各佔一半分數之比重，惟我國之國文教學，向來重視古文閱讀、國學常識等，在教學大綱中以選擇題的答寫作為主要教學方向，許多學生對於國寫部分之掌握能力相對不足。因此，本組希望透過分析國寫情意題佳作詞頻，進一步洞察國寫在我國命題方向與佳作取材等寫作方式。
 
 ---
 
@@ -437,18 +437,10 @@ for(i in 1:(length(good_sent)-1)){
 
 <br>
 
-## **3語彙詞頻分析**
-**由於此部分程式以Python撰寫，詳細結果請參閱以下網頁** [連結](https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html)
-
-### **3.1中文語彙詞頻**
-### **3.2冷僻字使用佔比**
-
-<br>
-
-## **4相似性分析**
-### **4.1首段與尾段落相似性**
-### **4.2輸入新文章分析器**
-```{r, echo=FALSE, warning=FALSE}
+## **3相似性分析**
+### **3.1首段與尾段落相似性**
+### **3.2輸入新文章分析器**
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 
 library("jiebaR", "jiebaRD")
 library("stringr")
@@ -563,11 +555,19 @@ sort(doc_sim["AST_100_1.txt", ], decreasing = T)[1:20]
 
 ```
 
+<br>
+
+## **4語彙詞頻分析**
+**由於此部分程式以Python撰寫，詳細結果請參閱以下網頁** [連結](https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html)
+
+### **4.1中文語彙詞頻**
+### **4.2冷僻字使用佔比**
+
 ---
 
 # **小結**
-從上述結果可以看出，佳作文章與傳統作文寫作方向並無太大差異，在結構上多為600字上下之作文，以四段式作文為主，有超過六成之文章引用名言佳句，而在文章中最常出現的偉人以中國古文人為主，又以孔子出現頻率最高。此外，在文章相似性部分，
-最後，我們可以從詞頻相關的研究結果中看出，綜合所有文章觀察的結果，冷僻字使用的佔比約為36%
+從上述結果可以看出，佳作文章與傳統作文寫作方向並無太大差異，在結構上多為600字上下之作文，以四段式作文為主，有超過六成之文章引用名言佳句，而在文章中最常出現的偉人以中國古文人為主，又以孔子出現頻率最高。此外，在文章相似性部分，只要同屆的作文篇幅超過5篇，能在相似度大於50%下找到同屆作文的比率超過70%。最後，我們可以從詞頻相關的研究結果中看出，綜合所有文章觀察的結果，平均詞意量約 6個詞、動詞名詞比例約為 1.5、
+佳作冷僻詞使用量約 36%。
 
 ---
 
