--- a/source/web/index.Rmd
+++ b/source/web/index.Rmd
@@ -74,14 +74,14 @@ library("magrittr")
 <div class = "row">
 <div class = "col-md-8">
 ```{r, echo = FALSE, message=FALSE, warning=FALSE}
-text <- list.files(path = "../data_set/", full.names = FALSE)## ÀÉ®×
+text <- list.files(path = "../../data_set/", full.names = FALSE)## ÀÉ®×
 paragraph_num <- vector("numeric", length = length(text))## number of paragraph
 article_len <- vector("numeric", length = length(text))## length of article
 sentence_num <- vector("numeric", length = length(text))## number of sentencce
 
 post <- list()
 for(i in seq_along(text)){
-  post[[i]] <- readLines(paste0("../data_set/", text[i]), encoding = "UTF-8", warn = FALSE)
+  post[[i]] <- readLines(paste0("../../data_set/", text[i]), encoding = "UTF-8", warn = FALSE)
   paragraph_num[i] <- length(post[[i]])
   a <- post[[i]][1]
   for(j in 2 : length(post[[i]])){
@@ -241,15 +241,15 @@ ggplot(data = year_df) +
 
 <div class = "row">
 
-<div class = "col-md-7">
+<div class = "col-md-8">
 ```{r, echo = FALSE, out.width='100%', warning=FALSE}
 ## 讀檔
-id <- list.files("../data_set/") # 文章的檔名
+id <- list.files("../../data_set/") # 文章的檔名
 contents <- vector("character", length(id)) # 創一個長度與文章數相同的vector
 
 # 將文章內容讀進來，並放入contents這個變數中(不分段)
 for (i in seq_along(id)){
-  path <- paste0("../data_set/", id[i])
+  path <- paste0("../../data_set/", id[i])
   contents[i] <- paste0(readLines(path, encoding = "UTF-8", warn=FALSE), collapse = "")
 }
 
@@ -289,29 +289,7 @@ geom_text(aes(label = paste0(sprintf("%1.1f", percent*100),"%"), y=(count+10)),s
 ```
 </div>
 
-<div class = "col-md-5">
-```{r, echo = FALSE, out.width='100%', fig.height=5, fig.width=5, warning=FALSE, message=FALSE}
-# 有引用佳句的文章比例為多少
-df_good_sent <- tibble::tibble(id = id)
-df_quote <- df_good_sent %>%
-  mutate(quote = (id %in% good_sent_id)) %>%
-  group_by(quote) %>%
-  summarise(quote_Q = n(), percentage = n()/208)
-
-#製圖
-ggplot(df_quote, aes(x=" ", y=percentage, fill=quote)) +
-       geom_bar(width = 1, stat = "identity") +
-       coord_polar("y", start=0)+ 
-  geom_text(aes(label = quote_Q), position = position_stack(vjust = 0.5),size=9)+
-                
-#加上標題
-labs(title="引用佳句之文章比例", x = "", y = "", fill = "")+
-
-#修改標籤名字
-theme(text=element_text(family="LiHeiPro",size=12))
-
-```
-從上圖可以看出，有引用佳句之文章約有6成，超過半數，此外可以發現若該年度作文主題非典型之抒情、敘事文，佳句引用比例有較高的趨勢。
+<div class = "col-md-4">
 
 </div>
 </div>
@@ -375,11 +353,43 @@ ggplot(names_df1, aes(x = reorder(name, article_found_Q), y = article_found_Q)) 
 ```
 </div>
 <div class = "col-md-5">
+<br>
 從該圖呈現之結果可以看出，佳作文章中的名人出現頻率以中國古人為主，其中又以孔子出現次數最多，又上述出現之中國古人物，皆屬課綱30古文之作者。
 </div>
 </div>
 
 ### **2.2佳句**
+<div class = "row">
+<div class = "col-md-7">
+```{r, echo = FALSE, out.width='100%', fig.height=5, fig.width=5, warning=FALSE, message=FALSE}
+# 有引用佳句的文章比例為多少
+df_good_sent <- tibble::tibble(id = id)
+df_quote <- df_good_sent %>%
+  mutate(quote = (id %in% good_sent_id)) %>%
+  group_by(quote) %>%
+  summarise(quote_Q = n(), percentage = n()/208)
+
+#製圖
+ggplot(df_quote, aes(x=" ", y=percentage, fill=quote)) +
+       geom_bar(width = 1, stat = "identity") +
+       coord_polar("y", start=0)+ 
+  geom_text(aes(label = quote_Q), position = position_stack(vjust = 0.5),size=9)+
+                
+#加上標題
+labs(title="引用佳句之文章比例", x = "", y = "", fill = "")+
+
+#修改標籤名字
+theme(text=element_text(family="LiHeiPro",size=12))
+
+```
+</div>
+<div class = "col-md-5">
+<br>
+<br>
+從左圖可以看出，有引用佳句之文章約有6成，超過半數，此外可以發現若該年度作文主題非典型之抒情、敘事文，佳句引用比例有較高的趨勢。
+</div>
+</div>
+
 **佳句集錦**
 ```{r, echo=FALSE, attr.output='style="max-height: 300px;"', warning=FALSE}
 good_sent <- c()
@@ -462,10 +472,8 @@ getmode <- function(v) {
 # use_python("D:\\Anaconda")
 # py_available()
 
-setwd("../data_set/")
-getwd()
 
-text <- list.files(path = "./", full.names = FALSE)## ÀÉ®×
+text <- list.files(path = "../../data_set/", full.names = FALSE)## ÀÉ®×
 paragraph_num <- vector("numeric", length = length(text))## number of paragraph
 article_len <- vector("numeric", length = length(text))## length of article
 sentence_num <- vector("numeric", length = length(text))## number of sentencce
@@ -474,7 +482,7 @@ post <- list()
 first <- list()
 last <- list()
 for(i in seq_along(text)){
-  post[[i]] <- readLines(text[i], encoding = "UTF-8", warn = FALSE)
+  post[[i]] <- readLines(paste0("../../data_set/", text[i]), encoding = "UTF-8", warn = FALSE)
   paragraph_num[i] <- length(post[[i]])
   a <- post[[i]][1]
   first[i] <- post[[i]][1]
@@ -514,7 +522,7 @@ for(i in seq_along(post)){
     tokenizers::tokenize_regex(pattern =  "\u3000") %>%
     tokens()
   q_dfm <- dfm(quanteda_corpus_a) %>%
-    dfm_remove(pattern =  readLines("../source/stopwords.txt"), valuetype = "fixed") %>%
+    dfm_remove(pattern =  readLines("../stopwords.txt"), valuetype = "fixed") %>%
     dfm_select(pattern = "[\u4E00-\u9FFF]", valuetype = "regex") %>%
     dfm_tfidf()
   similar[i] <- cossim(q_dfm[1, ], q_dfm[2, ])
@@ -562,10 +570,7 @@ getmode <- function(v) {
 # use_python("D:\\Anaconda")
 # py_available()
 
-setwd("./data_set")
-getwd()
-
-text <- list.files(path = "./", full.names = FALSE)## ÀÉ®×
+text <- list.files(path = "../../data_set/", full.names = FALSE)## ÀÉ®×
 paragraph_num <- vector("numeric", length = length(text))## number of paragraph
 article_len <- vector("numeric", length = length(text))## length of article
 sentence_num <- vector("numeric", length = length(text))## number of sentencce
@@ -574,7 +579,7 @@ post <- list()
 first <- list()
 last <- list()
 for(i in seq_along(text)){
-  post[[i]] <- readLines(text[i], encoding = "UTF-8", warn = FALSE)
+  post[[i]] <- readLines(paste0("../../data_set/", text[i]), encoding = "UTF-8", warn = FALSE)
   paragraph_num[i] <- length(post[[i]])
   a <- post[[i]][1]
   first[i] <- post[[i]][1]
@@ -637,7 +642,7 @@ df_unbreak <- tibble::tibble(
 # df_break
 # df_unbreak
 # 
-df <- read_excel("../source/frequency_30_word.xlsx")
+df <- read_excel("../frequency_30_word.xlsx")
 test <- unname(unlist(as.list(df["1"])))
 
 quanteda_corpus <- corpus(df_break, 
@@ -665,7 +670,7 @@ sort(doc_sim["AST_100_1.txt", ], decreasing = T)[1:20]
 <br>
 
 ## **4語彙詞頻分析**
-**由於此部分程式以Python撰寫，詳細結果請參閱以下網頁** [連結](https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html)
+**由於此部分程式以Python撰寫，詳細結果請參閱以下網頁** [連結]( https://derekdylu.github.io/LING5505-Final-Project-Group3/source/site/sense.html)
 
 ### **4.1中文語彙詞頻**
 ### **4.2冷僻字使用佔比**
